...
        <scene sceneID="aHX-qN-4kl">
            <objects>
                <viewController storyboardIdentifier="Login" title="Login" id="PsI-pP-n4s" customClass="ASLoginViewController" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="4Ue-9X-7v1"/>
...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="4I9-Wg-uW9">
                                <rect key="frame" x="207" y="253" width="186" height="30"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                            </textField>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="UserName" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="Bw1-KU-YwC">
                                <rect key="frame" x="207" y="215" width="186" height="30"/>
                                <constraints>
...
                        <inset key="separatorInset" minX="15" minY="0.0" maxX="0.0" maxY="0.0"/>
                        <prototypes>
                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Home" id="wMo-Y4-tGd">
                                <rect key="frame" x="0.0" y="50" width="600" height="44"/>
                                <autoresizingMask key="autoresizingMask"/>
...
                                </connections>
                            </tableViewCell>
                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Projects" id="9Fs-bJ-qQx">
                                <rect key="frame" x="0.0" y="94" width="600" height="44"/>
                                <autoresizingMask key="autoresizingMask"/>
...
                        <inset key="separatorInset" minX="15" minY="0.0" maxX="0.0" maxY="0.0"/>
                        <prototypes>
                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Project Details" id="ayf-CP-yyc">
                                <rect key="frame" x="0.0" y="114" width="600" height="44"/>
                                <autoresizingMask key="autoresizingMask"/>
...
                                </connections>
                            </tableViewCell>
                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Issues" id="8jk-jv-9Hu">
                                <rect key="frame" x="0.0" y="158" width="600" height="44"/>
                                <autoresizingMask key="autoresizingMask"/>
...
        <scene sceneID="dXz-n6-4H9">
            <objects>
                <viewController storyboardIdentifier="IssueDetails" title="Issue Details" id="qzM-ff-4A3" customClass="IssueDetailsViewController" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="kKz-Fr-WTR"/>
...
                    </view>
                    <navigationItem key="navigationItem" title="Chose Range For Issue" id="XF7-lF-EWi">
                        <barButtonItem key="leftBarButtonItem" title="Cancel" id="WMM-zW-CxT">
                            <connections>
                                <action selector="cancel:" destination="LMb-Fe-VZx" id="XBz-uq-VoI"/>
...
