...
    static NSString* CellIdentifier = @"Cell";
    
    UITableViewCell *cell = [tableView dequeueReusableCellWithIdentifier:CellIdentifier forIndexPath:indexPath];
    NSDictionary *tempDictionary= [projectsItems objectAtIndex:indexPath.row];
    
    cell.textLabel.text = [tempDictionary objectForKey:@"name"];
    cell.detailTextLabel.text = [NSString stringWithFormat:@"View Project..."];
    // Configure the cell...
    cell.detailTextLabel.frame = CGRectMake(20,241,560,21);
    
    return cell;
}

...
